--- a/src/views/Pokemon/Pokemon.css
+++ b/src/views/Pokemon/Pokemon.css
@@ -1,7 +1,13 @@
+
+
 .infoPokemon{
     display: flex;
     width: 100%;
     height: 100vh;
+}
+
+h1{
+    cursor: pointer;
 }
 
 .infoPokemon section:first-child{
@@ -25,4 +31,8 @@
     display: grid;
     padding: 0 2rem;
     grid-template-columns: repeat(2,1fr);
+}
+
+.PokemonContainer{
+    padding: 0 5rem;
 }
